Added markup for project view: empty and full version

--- a/project-single-view-empty.html
+++ b/project-single-view-empty.html
@@ -81,44 +81,65 @@
 
 	<section class="mb50">
 		<div class="wrap">
-			<div class="short-half-col columns txt14 align-top c-dark-purple">
-				<div class="one-col txt14 c-dark-purple">
-					<div class="one-col mb20">
-						<p>Industry</p>
-						<p><strong>Food</strong></p>
+			<div class="short-half-col columns align-top c-dark-purple">
+				<div class="one-col c-dark-purple">
+					<div class="one-col">
+						<p class="txt14">Industry</p>
+						<div class="one-col mb10 label-wrap">
+							<label>Service</label>
+							<input class="input-x1 size-x3 c-dark-purple" type="text" value="Food" placeholder="Service">
+						</div>
 					</div>
-					<div class="one-col mb20">
-						<p>Cohort</p>
-						<p><strong>Spring 2017 (May 12 2016)</strong></p>
+					<div class="one-col">
+						<p class="txt14">Location</p>
+						<div class="one-col mb10 label-wrap">
+							<label>Address</label>
+							<input class="input-x1 size-x3 c-dark-purple" type="text" value="Street #21, City Nebraska, US" placeholder="Address">
+						</div>
 					</div>
-					<div class="one-col mb20">
-						<p>Products / Prototype</p>
-						<p><strong>Low fidelity MVP, High fidelity MVP</strong></p>
-					</div>
-					<div class="one-col mb20">
-						<p>Market</p>
-						<p><strong>Market Size unknown, Total Available: $120 Million</strong></p>
+					<div class="one-col">
+						<p class="txt14">Cohort</p>
+						<div class="one-col mb10 label-wrap">
+							<label>Subject</label>
+							<input class="input-x1 size-x3 c-dark-purple" type="text" value="Spring 2017 (May 12 2016)" placeholder="Cohort subject">
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="short-half-col columns align-top">
 				<h2 class="serif mb20 c-dark-purple">Key Features</h2>
-				<div class="one-col txt14 c-dark-purple">
-					<div class="one-col mb20">
-						<p>Industry</p>
-						<p><strong>Food</strong></p>
+				<div class="one-col c-dark-purple">
+					<div class="one-col">
+						<div class="one-col mb10 label-wrap">
+							<label>Name</label>
+							<input class="input-x1 size-x3 c-dark-purple" type="text" value="Feature number one" placeholder="Feature Name">
+						</div>
 					</div>
-					<div class="one-col mb20">
-						<p>Cohort</p>
-						<p><strong>Spring 2017 (May 12 2016)</strong></p>
+					<div class="one-col">
+						<div class="one-col mb10 label-wrap">
+							<label>Specs</label>
+							<input class="input-x1 size-x3 c-dark-purple" type="text" value="Pulvinar nulla tortor a odio. Aliquam sed libero vitae justo tristique viverra. " placeholder="Feature Specs">
+						</div>
 					</div>
-					<div class="one-col mb20">
-						<p>Products / Prototype</p>
-						<p><strong>Low fidelity MVP, High fidelity MVP</strong></p>
+					<!-- Add Other Field -->
+					<div class="one-col bg-gray-line size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="minus">-</span></button>
 					</div>
-					<div class="one-col mb20">
-						<p>Market</p>
-						<p><strong>Market Size unknown, Total Available: $120 Million</strong></p>
+				</div>
+				<div class="one-col c-dark-purple">
+					<div class="one-col">
+						<div class="one-col mb10 label-wrap">
+							<input class="input-x1 size-x3 c-dark-purple" type="text" placeholder="Feature Name">
+						</div>
+					</div>
+					<div class="one-col">
+						<div class="one-col mb10 label-wrap">
+							<input class="input-x1 size-x3 c-dark-purple" type="text" placeholder="Feature Specs">
+						</div>
+					</div>
+					<!-- Add Other Field -->
+					<div class="one-col bg-gray-line mb20 size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="plus">+</span></button>
 					</div>
 				</div>
 			</div>
@@ -127,44 +148,106 @@
 
 	<section class="mb50">
 		<div class="wrap">
-			<h2 class="serif mb20 c-dark-purple">Key Features</h2>
+			<h2 class="serif mb20 c-dark-purple">Key Performance Indicators Sales</h2>
 			<div class="one-fourth columns">
-				<div class="one-col txt14 c-dark-purple">
+				<div class="one-col c-dark-purple">
 					<div class="one-col mb20">
-						<p>Sales</p>
-						<p><strong>$200K monthly.
-						5% monthly growth</strong></p>
+						<p class="txt14 mb10">Sales</p>
+						<div class="one-col mb10 label-wrap">
+							<label>Specs</label>
+							<input class="input-x1 c-dark-purple size-x3" type="text" value="$200K monthly. 5% monthly growth" placeholder="Sale specs">
+						</div>
 					</div>
-					<div class="one-col mb20">
-						<p>Issued Patents</p>
-						<p><strong>– Aliquam </strong></p>
-						<p><strong>– libero </strong></p>
-						<p><strong>– vitae </strong></p>
-						<p><strong>– Tristique viverra</strong></p>
+					<div class="one-col">
+						<p class="txt14 mb10">Issues Patents</p>
+						<div class="one-col mb10 label-wrap">
+							<label>Issue name</label>
+							<input class="input-x1 c-dark-purple size-x3" type="text" value="Aliquam" placeholder="Issue name">
+						</div>
+						<!-- Add Other Field -->
+						<div class="one-col bg-gray-line size-x3">
+							<button class="bg-blue-add-btn-x1 c-center"><span class="minus">-</span></button>
+						</div>
+						<div class="one-col mb10 label-wrap">
+							<input class="input-x1 c-dark-purple size-x3" type="text" placeholder="Issue name">
+						</div>
+						<!-- Add Other Field -->
+						<div class="one-col bg-gray-line size-x3">
+							<button class="bg-blue-add-btn-x1 c-center"><span class="plus">+</span></button>
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="one-fourth columns">
-				<div class="one-col txt14 c-dark-purple">
-					<div class="one-col mb20">
-						<p>Top Investors</p>
-						<p><strong>Carrie Sandoval</strong></p>
-						<p><strong>Victor French</strong></p>
-						<p><strong>Mitchell Hudson	</strong></p>
+				<div class="one-col mb20 c-dark-purple">
+					<p class="txt14 mb10">Top Investors</p>
+					<div class="one-col mb10 label-wrap">
+						<label>Name</label>
+						<input class="input-x1 c-dark-purple size-x3" type="text" value="Carrie Sandoval" placeholder="Name">
 					</div>
-					<div class="one-col mb20">
-						<p>Partnership</p>
-						<p><strong>Accenture (Admin)</strong></p>
-						<p><strong>500 Startups (Infrastructure)</strong></p>
+					<!-- Remove Field -->
+					<div class="one-col bg-gray-line size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="minus">-</span></button>
+					</div>
+					<div class="one-col mb10 label-wrap">
+						<label>Name</label>
+						<input class="input-x1 c-dark-purple size-x3" type="text" value="Victor French" placeholder="Name">
+					</div>
+					<!-- Remove Field -->
+					<div class="one-col bg-gray-line size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="minus">-</span></button>
+					</div>
+					<div class="one-col mb10 label-wrap">
+						<input class="input-x1 c-dark-purple size-x3" type="text" placeholder="Name">
+					</div>
+					<!-- Add Other Field -->
+					<div class="one-col bg-gray-line size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="plus">+</span></button>
+					</div>
+				</div>
+				<div class="one-col mb20 c-dark-purple">
+					<p class="txt14">Partnership</p>
+					<div class="one-col mb10 label-wrap">
+						<label>Name</label>
+						<input class="input-x1 c-dark-purple size-x3" type="text" value="Accenture (Admin)" placeholder="Name">
+					</div>
+					<!-- Remove Field -->
+					<div class="one-col bg-gray-line size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="minus">-</span></button>
+					</div>
+					<div class="one-col mb10 label-wrap">
+						<input class="input-x1 c-dark-purple size-x3" type="text" placeholder="Name">
+					</div>
+					<!-- Add Other Field -->
+					<div class="one-col bg-gray-line size-x3">
+						<button class="bg-blue-add-btn-x1 c-center"><span class="plus">+</span></button>
 					</div>
 				</div>
 			</div>
 			<div class="one-fourth columns">
-				<div class="one-col txt14 c-dark-purple">
-					<p>Employees</p>
-					<p><strong>Admin - 12</strong></p>
-					<p><strong>Operations - 55</strong></p>
-					<p><strong>Maintenance - 7</strong></p>
+				<div class="one-col">
+					<p class="txt14 c-dark-purple">Employees</p>
+					<div class="one-col mb20 label-wrap">
+						<div class="one-col med-input">
+							<input type="text" class="input-x1 c-dark-purple" value="Admin" placeholder="Position">
+						</div>
+						<input type="text" class="select-input input-x1 small-input c-dark-purple" value="12">
+						<button class="bg-blue-add-btn-x1"><span class="minus">-</span></button>
+					</div>
+					<div class="one-col mb20 label-wrap">
+						<div class="one-col med-input">
+							<input type="text" class="input-x1 c-dark-purple" value="Operations" placeholder="Position">
+						</div>
+						<input type="text" class="select-input input-x1 small-input c-dark-purple" value="6">
+						<button class="bg-blue-add-btn-x1"><span class="minus">-</span></button>
+					</div>
+					<div class="one-col mb20 label-wrap">
+						<div class="one-col med-input">
+							<input type="text" class="input-x1 c-dark-purple" placeholder="Position">
+						</div>
+						<input type="text" class="select-input input-x1 small-input c-dark-purple" placeholder="7">
+						<button class="bg-blue-add-btn-x1"><span class="plus">+</span></button>
+					</div>
 				</div>
 			</div>
 		</div>
