Pop-ups.html: addded chat modal

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/chat.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|PT+Serif:400,700" rel="stylesheet">
 	<title>Document</title>
 </head>
@@ -1449,6 +1450,79 @@
 			<p class="mb20"><strong>Link to Dropbox</strong></p>
 			<input type="text" class="input-x1 input invalid c-dark-purple" placeholder="https://www.dropbox.com/business/">
 			<p class="help invalid">This email is invalid.</p>
+		</div>
+	</div>
+</div>
+
+
+<!-- CHAT MODAL -->
+<div class="one-col mb50">
+	<div class="chat-modal shadow">
+		<button class="gray-close-btn"></button>
+		<div class="one-col bg-cyan">
+			<div class="one-col p24">
+				<p class="c-white">Chatting with <strong>Linda Gutierrez</strong></p>
+			</div>
+			<div class="one-col mb20">
+				<div class="hypothesis-chat-wrap plr24 scroll-content">
+					<ul class="inline">
+						<li><p class="c-white">Carrot dog food</p></li>
+						<li><p class="c-white">Andrea Garza</p></li>
+						<li><p class="c-white">Other team on Cohort</p></li>
+						<li><p class="c-white">Other team on Cohort</p></li>
+						<li><p class="c-white">Other team on Cohort</p></li>
+						<li><p class="c-white">Other team on Cohort</p></li>
+						<li><p class="c-white">Miguel Arredondo</p></li>
+						<li><p class="c-white">Pedro Demecci</p></li>
+						<li><p class="c-white">Maria Garza</p></li>
+						<li><p class="c-white">Arturo Gonzalez</p></li>
+						<li><p class="c-white">Laura Martínez</p></li>
+						<li><p class="c-white">Key Insights</p></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- CHAT MODAL -->
+<div class="one-col mb50">
+	<div class="chat-modal shadow">
+		<button class="gray-close-btn"></button>
+		<div class="one-col bg-cyan">
+			<div class="one-col p24">
+				<button class="white-border-small-btn inline mr10">←</button>
+				<p class="c-white inline">Chatting with <strong>Linda Gutierrez</strong></p>
+				</ul>
+			</div>
+			<div class="one-col mb20">
+				<div class="hypothesis-chat-wrap plr24 scroll-content">
+					<div class="hypothesis-chat">
+						<div class="hypothesis-comment ltr mb30">
+							<div class="message">
+								<p class="c-cyan serif">I need to dive deeper in this topic; I have a sense that I’m on the right way but need to conduct more interviews</p>
+								<div class="author">
+									<div class="profile" style="background-image: url('img/profile1.png');"></div>
+									<p class="txt14">by <strong>Linda</strong> at 12:23pm on Jan 26, 2017</p>
+								</div>
+							</div>
+						</div>
+						<div class="hypothesis-comment rtl mb30">
+							<div class="message">
+								<p class="c-cyan serif">Donec ac efficitur purus. Donec volutpat sapien id cursus rutrum. Suspendisse in fermentum elit. Suspendisse in fermentum elit. Aliquam eleifend.</p>
+								<div class="author">
+									<div class="profile" style="background-image: url('img/profile1.png');"></div>
+									<p class="txt14">by <strong>You</strong> at 12:23pm on Jan 26, 2017</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="add-comment plr24">
+					<textarea class="textarea-input" placeholder="Add your comment"></textarea>
+					<input type="submit" class="submit-input">
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
